# madr

./: README.md  pyproject.toml
.github/workflows/: pipeline.yaml
madr/: app.py  security.py  settings.py
madr/models/: authors.py  books.py
madr/routers/: health.py
madr/schemas/: authors.py  books.py  users.py
migrations/versions/: 7290932bd2e3_alter_fields_new.py  80a4464aaff2_alter_fields_models.py  e108bd8fe8e6_alter_fields.py
src/madr/authors/: models.py
src/madr/books/: models.py
src/madr/users/: models.py
tests/: test_app.py  test_health.py
